feat and fixes to metadata related endpoints and schema handling
